--- a/DesctopHITE/AppDateFolder/StyleFolder/ListViewDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ListViewDictionary.xaml
@@ -1,19 +1,19 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="ListBox">
+    <Style TargetType="ListView">
         <Setter Property="VirtualizingPanel.ScrollUnit" Value="Pixel"/>
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="0"/>
     </Style>
-    <Style x:Key="ListBoxItemSelected" TargetType="ListBoxItem">
+    <Style x:Key="ListViewItemSelected" TargetType="ListViewItem">
         <Setter Property="Margin" Value="5 10 5 10"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="ListBoxItem">
+                <ControlTemplate TargetType="ListViewItem">
                     <Border 
                         x:Name="border"
                         CornerRadius="10"
