--- a/DesctopHITE/AppDateFolder/StyleFolder/BorderDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/BorderDictionary.xaml
@@ -20,7 +20,7 @@
         <Setter Property="MinHeight" Value="45"/>
         <Setter Property="MaxHeight" Value="250"/>
     </Style>
-    <Style x:Key="BorderInformationWorker" TargetType="Border">
+    <Style x:Key="BorderInformation" TargetType="Border">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="#f5f5f5"/>
         <Setter Property="BorderThickness" Value="2"/>
