--- a/DesctopHITE/PerformanceFolder/WindowsFolder/CaptchaWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/CaptchaWindow.xaml
@@ -79,16 +79,34 @@
                             Margin="0 0 10 0"
                             x:Name="EnterCaptchaButton"
                             Click="EnterCaptchaButton_Click"
-                            Content="ПРОДОЛЖИТЬ"
                             Width="220"
-                            Height="40"/>
+                            Height="40">
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock
+                                    Margin="0 0 5 0"
+                                    Text="&#xf300;"
+                                    Style="{DynamicResource IconTextBlockStyle}"/>
+                                <TextBlock 
+                                    Margin="5 0 0 0"
+                                    Text="ПРОДОЛЖИТЬ"/>
+                            </StackPanel>
+                        </Button>
                         <Button
                             Margin="10 0 0 0"
                             x:Name="NewCaptchaButton"
                             Click="NewCaptchaButton_Click"
-                            Content="Другая капча"
-                            Width="180"
-                            Height="40"/>
+                            Width="190"
+                            Height="40">
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock
+                                    Margin="0 0 5 0"
+                                    Text="&#xf307;"
+                                    Style="{DynamicResource IconTextBlockStyle}"/>
+                                <TextBlock 
+                                    Margin="5 0 0 0"
+                                    Text="Другая капча"/>
+                            </StackPanel>
+                        </Button>
                     </StackPanel>
                 </StackPanel>
             </Grid>
