--- a/DesctopHITE/PerformanceFolder/WindowsFolder/AuthorizationWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/AuthorizationWindow.xaml
@@ -5,6 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
+    IsVisibleChanged="Window_IsVisibleChanged"
     WindowStartupLocation="CenterScreen"
     Style="{DynamicResource AuthorizationWindowStyle}">
     <Border Style="{DynamicResource MainBorderStyle}">
@@ -47,6 +48,27 @@
                 </StackPanel>
             </Grid>
             <Grid Grid.Row="1">
+                <TextBlock
+                    Visibility="Collapsed"
+                    x:Name="LoadingAppInformationTextTextBlock"
+                    Opacity="0.5"
+                    Style="{DynamicResource MainStyleTextBlock}"
+                    VerticalAlignment="Bottom" 
+                    HorizontalAlignment="Right"
+                    Margin="10"
+                    FontSize="15">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock 
+                            x:Name="LoadingSpinnerTextBlock"
+                            Style="{StaticResource IconTextBlockStyle}"
+                            Text="&#xf3ec;"
+                            Margin="0 0 2 0"/>
+                        <TextBlock
+                            VerticalAlignment="Center"
+                            Text="Приложение загружается"
+                            Margin="2 0 0 0"/>
+                    </StackPanel>
+                </TextBlock>
                 <Grid>
                     <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
                         <Image
